--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "token-factory-mcp-server",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "bin": "build/index.js",
+  "file": [
+     "build"
+  ],
   "scripts": {
     "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
     "prepare": "npm run build",
